--- a/public/global.css
+++ b/public/global.css
@@ -1,18 +1,14 @@
 body {
-	font-family: Arial, sans-serif;
-	background-color: #2c3e50;
+	font-family: Lato;
+	background-color: #231456;
 	color: #ecf0f1;
 	margin: 0;
 	padding: 0;
 	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100vh;
-	flex-direction: column;
   }
   
   button {
-	background-color: #3498db;
+	background-color: #5BB2B0;
 	color: white;
 	border: none;
 	border-radius: 5px;
