--- a/public/global.css
+++ b/public/global.css
@@ -1,10 +1,11 @@
+/* Global CSS */
 body {
 	font-family: Lato;
 	background-color: #231456;
 	color: #ecf0f1;
 	margin: 0;
 	padding: 0;
-	display: flex;
+	/* Elimina display: flex del body */
   }
   
   button {
@@ -18,16 +19,24 @@ body {
   }
   
   button:hover {
-	background-color: #2980b9;
+	background-color: #E09C3B;
   }
   
-  @media (max-width: 600px) {
-	body {
-	  padding: 20px;
+  @media (max-width: 768px) {
+	.container {
+	  flex-direction: column;
 	}
   
 	button {
 	  width: 100%;
+	}
+  
+	img {
+	  max-width: 200px;
+	}
+  
+	p {
+	  font-size: 1.5em;
 	}
   }
   
